<resources>
    <string name="app_name">App-Grupo-6</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_btn_Login">LOGIN</string>
    <string name="txt_email_ex">email@example.com</string>
    <string name="txt_btn_SignUp">Sign Up</string>
    <string name="labelnombres">Name</string>
    <string name="labelapellidos">Lastname</string>
    <string name="labelid">Nit(Document Number)</string>
    <string name="labelcorreo">Email</string>
    <string name="labeltelefono">Phone</string>
    <string name="labelpass">Password</string>
    <string name="labelbtnregister">Sign up</string>
    <string name="labelbasicinfo">Basic Information</string>
    <string name="labelPolitica">By clicking check, you agree to our Terms, Data Policy </string>
    <string name="txt_inicio">Welcome</string>
    <string name="txt_sell">SELL</string>
    <string name="txt_buy">BUY</string>
    <string name="txt_ordes">MY ORDERS</string>
    <string name="txt_product_name">Name</string>
    <string name="txt_product_des">Description</string>
    <string name="txt_product_price">Price</string>
    <string name="txt_save">SAVE</string>

</resources>