<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".NewProductActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_product_name"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_product_des"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_product_price"
        android:textColor="@color/white" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSave"
        android:text="@string/txt_save"/>

</androidx.appcompat.widget.LinearLayoutCompat>